2008-07-22  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* ext/lame/gstlame.c: (gst_lame_class_init), (gst_lame_init),
	(gst_lame_set_property), (gst_lame_get_property), (gst_lame_setup):
	* ext/lame/gstlame.h:
	Fix build with lame >= 3.97. The padding type and cwlimit settings
	are deprecated now and the function declarations are hidden in the
	headers so deprecate the GObject properties for them and remove them
	in 0.11. Fixes bug #544039.

2008-07-13  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* ext/mpeg2dec/gstmpeg2dec.c: (handle_sequence):
	Don't allow width/height outside the spec (i.e. smaller than 16
	and higher than 4096). Such files are corrupted ones and setting
	caps that are not a subset of the template caps confuses playbin.
	Fixes bug #542646.

2008-07-11  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* ext/sidplay/Makefile.am:
	Fix the build.

2008-07-08  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* configure.ac:
	Don't include ERROR_CFLAGS in GST_CXXFLAGS as it might include
	flags that are invalid for C++.

2008-07-05  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	Patch by: Tal Shalif <tshalif at nargila dot org>

	* ext/dvdnav/dvdnavsrc.c: (gst_dvd_nav_src_stop):
	Prevent double free. Fixes bug #541697.

2008-07-05  Mark Nauwelaerts  <mark.nauwelaerts@collabora.co.uk>

	* gst/mpegstream/gstdvddemux.c: (gst_dvd_demux_base_init),
	(gst_dvd_demux_get_audio_stream),
	(gst_dvd_demux_get_subpicture_stream),
	(gst_dvd_demux_parse_packhead), (gst_dvd_demux_reset):
	* gst/mpegstream/gstmpegdemux.c: (gst_mpeg_demux_init),
	(gst_mpeg_demux_process_event), (gst_mpeg_demux_init_stream),
	(gst_mpeg_demux_parse_packhead), (gst_mpeg_demux_reset):
	* gst/mpegstream/gstmpegdemux.h:
	Resend tags event after a FLUSH (seek) to support prerolling
	a partial pipeline.

2008-07-03  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* configure.ac:
	* gst/asfdemux/gstasfdemux.c: (gst_asf_demux_process_object):